# Marian

./: .coverage  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AI_SESSION_GUIDE.md  ARCHIVE_GUIDE.md  BACKLOG.md  CATALOG_BACKLOG.md  CHAT_CLOSE.md  CHAT_START.md  LIBRARIAN_GUIDE.md  MARIAN_DESIGN_AND_DECISIONS.md  Makefile  NEXT_SESSION.md  PROJECT_PLAN.md  README.md  SCHEMA_PROCESS.md  SESSION_WORKFLOW.md  SETUP.md  alembic.ini  analysis_viewer.py  app_api_client.py  app_catalog.py  app_catalog_interactive.py  app_email_analyzer.py  app_email_reports.py  app_email_self_log.py  app_get_mail.py  catalog_constants.py  chat_session_manager.py  check_analysis.py  check_db.py  check_recent_analyses.py  check_urls.py  constants.py  db_session.py  deploy-test.sh  deploy.sh  email_analyzer.py  (+47 more)
.github/workflows/: migrations.yml
alembic/: env.py
alembic/versions/: 65d82db06bc3_sync_email_schema.py  example_20241229_2258_add_user_preferences.py  example_20241229_2302_add_user_settings.py
archive/: ARCHIVED_20241223_1840_test_main.py  ARCHIVED_20241225_1039_model_guide.md  ARCHIVED_20241225_1105_ADR001_SQLAlchemy_Models.md  ARCHIVED_20241225_1719_util_logging.py  ARCHIVED_20241225_1728_check_unanalyzed.sql  ARCHIVED_20241225_1733_catalog_constants.py  ARCHIVED_20241225_1754_dynamodb-cf.yaml  ARCHIVED_20241226_1716_test_version_tracking.py  ARCHIVED_20241227_0716_database_util.py  ARCHIVED_20241227_1249_testing.md  ARCHIVED_20241227_1528_testing_guide_update.md  README.md
backup/: README.md  test_email_store.db.bak
backup/20241223/: prompts.db  test_email_core.py.mock  test_email_retrieval.py.mock  test_scalability.py.mock
config/: __init__.py  api_versions.json  constants.py  environment.py  schema.yaml  test_settings.py
config/archive/: ARCHIVED_20241225_1728_check_unanalyzed.sql  ARCHIVED_20241225_1754_dynamodb-cf.yaml  ARCHIVED_20241225_1754_lambda-config-cf.yaml  ARCHIVED_20241225_1754_lambda-role-cf.yaml  ARCHIVED_20241225_1802_email_analysis_schema.sql  README.md  (+3 more)
database/: config.py
db_migrations/: README.md  V1__initial_schema.sql  V2__add_status_and_tracking.sql  V3__add_case_insensitive_constraints.sql
docs/: AI_GUIDELINES.md  AI_SESSION_GUIDE.md  BACKLOG.md  BACKUP_GUIDE.md  CHAT_CLOSE.md  CHAT_START.md  DESIGN_DECISIONS.md  DEV_SESSION_CHECKLIST.md  GUIDELINES.md  PROJECT_MANAGEMENT_CHECKLIST.md  README.md  SESSION_WORKFLOW.md  SETUP_GUIDE.md  TEMP_20241227_0740_doc_rename_plan.md  ai-architecture.md  ai-guidelines.md  ai-sessions.md  api_mappings.md  backlog.md  backlog_prototypes.md  backup.md  code-standards.md  code_standards.md  contributing.md  database-design.md  database_design.md  design-decisions.md  dev-checklist.md  doc-standards.md  librarian.md  new-testing-guide.md  project-checklist.md  project-plan.md  session-workflow.md  session_log.md  setup.md  testing-guide.md  testing.md  testing_guide.md  troubleshooting.md
marian_lib/: __init__.py  anthropic_helper.py  logger.py
migrations/: README.md  env.py
models/: README.md  __init__.py  analysis.py  asset_catalog.py  base.py  catalog.py  catalog_item.py  database_init.py  db_init.py  domain_constants.py  email.py  email_analysis.py  email_message.py  gmail_label.py  item_relationship.py  label.py  registry.py  relationships.py  tag.py  tags.py  thread.py
old/: process_emails.py.bak  read_database.py
reports/: README.md
schema/: email_analysis_schema.sql  prompt_tracking.sql
schemas/: __init__.py  anthropic.py  gmail.py
scripts/: analysis_viewer.py  analyze_catalog.py  chat_session_manager.py  check_email_analysis_db.py  check_email_db.py  commit_files.sh  generate_models.py  generate_report.py  generate_schema_constants.py  init_db.py  manage_migrations.py  monitor_migrations.py  move_archives.sh  populate_asset_catalog.py  rebuild_db.py  seed_database.py  url_length_checker.py  util_backup_database.sh  verify_database_schema.py  verify_schemas.py
services/: README.md  asset_catalog_service.py
session_logs/: 2025-01-01_initial_setup.md  2025-01-02_database_consolidation.md
shared_lib/: README.md  __init__.py  anthropic_client_lib.py  anthropic_lib.py  api_monitor.py  api_utils.py  api_version_utils.py  broken_test_util.py  chat_log_util.py  chat_session_util.py  config_loader.py  constants.py  database_seeder.py  database_session_util.py  doc_standards.py  exceptions.py  file_constants.py  file_permission_util.py  gmail_lib.py  gmail_test_utils.py  gmail_utils.py  logging_util.py  migration_monitor.py  migration_utils.py  path_security_util.py  path_util.py  performance_util.py  schema_constants.py  security_util.py  string_utils.py  token_manager.py  utils.py
src/: README.md  __init__.py  app_api_client.py  app_catalog.py  app_catalog_interactive.py  app_email_analyzer.py  app_email_reports.py  app_email_self_log.py  app_get_mail.py  main.py  proto_gmail_operations.py  proto_google_keep.py  proto_inspect_prompts.py  proto_prompt_manager.py
tests/: README.md  conftest.py  conftest_db.py  factories.py  test_anthropic_lib.py  test_api_quality.py  test_api_validation.py  test_api_version_utils.py  test_catalog.py  test_code_quality.py  test_config.py  test_constants.py  test_data.py  test_data_validation.py  test_database_utils.py  test_date_utils.py  test_dependencies.py  test_doc_format.py  test_doc_hierarchy.py  test_doc_quality.py  test_documentation.py  test_email_analysis.py  test_email_analyzer.py  test_email_fields.py  test_email_reports.py  test_email_utils.py  test_file_duplicates.py  test_file_size_limits.py  test_get_mail.py  test_gmail_label.py  test_hardcoded_values.py  test_imports.py  test_integration.py  test_json_extraction.py  test_labels.py  test_labels.py.mock  test_main.py  test_migration.py  test_migrations.py  test_minimal.py  (+19 more)
tools/: __init__.py  doc_standards.py  doc_validator.py  setup.sh  test_runner.py
utils/: __init__.py  database.py  date_utils.py  email_utils.py  logger.py  logging_config.py  string_utils.py  util_check_urls.py  util_db_init.py  util_scalability.py  util_schema_verify.py  util_security.py  util_test_data.py
(+215 files in other folders)
