[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marian"
version = "0.1.0"
description = "Email analysis and management system"
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy",
    "alembic",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
