[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jexi"
version = "0.1.0"
description = "Email analysis and management system"
authors = []
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.12.8"
google-api-python-client = "2.120.0"
google-auth-oauthlib = "1.2.0"
boto3 = "1.33.6"
botocore = "1.33.13"
python-dateutil = "2.9.0"
pytz = "2024.1"
google-auth-httplib2 = "0.2.0"
keyring = "24.3.0"
pandas = "2.1.4"
plotly = "5.18.0"
jinja2 = "3.1.2"
markdown = "3.7"
numpy = "1.26.4"
tabulate = "0.9.0"
textblob = "0.17.1"
anthropic = "0.42.0"
python-dotenv = "1.0.1"
tqdm = "4.66.1"
sqlalchemy = "2.0.36"
alembic = "1.13.1"
networkx = "3.4.2"
structlog = "24.4.0"
pydantic = "2.6.1"
pydantic-settings = "2.2.1"
passlib = "1.7.4"
prompt-toolkit = "3.0.48"
cryptography = "42.0.0"
python-jose = "3.3.0"
tenacity = "8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.1.0"
pytest-mock = "3.14.0"
pytest-asyncio = "0.23.5"
factory-boy = ">=3.3.0"
black = ">=23.12.1"
pylint = ">=3.0.3"
bandit = "1.8.0"

[tool.poetry.scripts]
test = "pytest:main"
lint = "pylint:run_pylint"
format = "black:main"
check-imports = "pytest:main tests/test_imports.py -v"
coverage = "pytest:main --cov=src --cov-report=html tests/"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "requires_external_tools: marks tests that need external tools",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs/
'''

[tool.pylint.messages_control]
disable = [
    "C0111",  
    "C0103",  
    "C0330",  
    "C0326",  
]

[tool.pylint.format]
max-line-length = 88  

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
